Fixed an alignment issue of the soluttionRow, if there are 10 or more rows

--- a/src/components/GameRow/GameRow.css
+++ b/src/components/GameRow/GameRow.css
@@ -7,3 +7,7 @@
     border: 1px solid black;
     padding: 5px;
 }
+
+.row-index-container {
+    width: 18px;
+}
