--- a/src/components/SolutionRow/SolutionRow.css
+++ b/src/components/SolutionRow/SolutionRow.css
@@ -1,7 +1,7 @@
 .solution-row {
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 13px;
+    padding-left: 23px;
     padding-right: auto;
     border: 1px solid black;
 }
